[#9828] Separate basic login from web module